<resources>
    <string name="app_name">AboutLOTR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Characters</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="layout_character_image">Character Image</string>
    <string name="layout_character_name">Character Name</string>
    <string name="layout_character_info">Character Info</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_of_a_character">Icon of a Character</string>
    <string name="temp">temp</string>
    <string name="unknown">Unknown</string>
    <string name="gender_icon">Gender Icon</string>

    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_characters">Characters</string>
    <string name="bottom_navigation_menu_books">Books</string>
</resources>
