<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/BooksList"
        android:enabled="true"
        android:icon="@drawable/book"
        android:title="@string/bottom_navigation_menu_books"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/CharactersList"
        android:enabled="true"
        android:icon="@drawable/character"
        android:title="@string/bottom_navigation_menu_characters"
        app:showAsAction="ifRoom" />
</menu>