<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/character_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dip"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/layout_character_image"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/character_info"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:ellipsize="marquee"
        android:layout_toEndOf="@id/character_icon"
        android:textSize="12sp"
        android:layout_toRightOf="@id/character_icon"
        android:singleLine="true"
        android:text="@string/layout_character_info" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/character_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:layout_toEndOf="@id/character_icon"
        android:layout_toRightOf="@id/character_icon"
        android:text="@string/layout_character_name"
        android:textSize="16sp" />

</RelativeLayout>