<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/charaIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/icon_of_a_character"
            android:paddingBottom="30dp"
            tools:src="@tools:sample/avatars" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/charaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/charaGender"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/gender_icon"
                tools:src="@tools:sample/avatars" />
        </TableRow>

        <TextView
            android:id="@+id/charaRace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/charaBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/charaDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/charaURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>